fix for dataBad init file

--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <None Include="data.json" />
     <None Include="data2.json" />
+    <None Include="dataBad.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
