--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -20,12 +20,12 @@
 		<add key="SystemManagerPass" value="AS87654askj!@#"/>
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
-		<add key="RunLoadData" value="True"/>
-		<add key="StateFileConfig" value=""/>
+		<add key="RunLoadData" value="False"/>
+		<add key="StateFileConfig" value="data2"/>
 		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="MasterConnectionString" connectionString="Server=SQL5097.site4now.net;Database=db_a995b0_sadnadbve4r;Uid=db_a995b0_sadnadbve4r_admin;Pwd=Sadna123" />
+		<add name="MasterConnectionString" connectionString="Server=tcp:sadnaexpress12a.database.windows.net,1433;Database=sadnaExpress12a;Persist Security Info=False;Uid=sadnaadmin;Password=Sadna123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
 	</connectionStrings>
 </configuration>
 
