--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -12,16 +12,16 @@
 		<add key="Host" value="localhost"/>
 		<add key="ApiPort" value="8080"/>
 		<add key="SignalRPort" value="8081"/>
-		<add key="PaymentServiceURL" value="https://php-server-try.000webhostapp.com/"/>
-		<add key="SupplierServiceURL" value="https://php-server-try.000webhostapp.com/"/>
+		<add key="PaymentServiceURL" value="https://external-systems.000webhostapp.com/"/>
+		<add key="SupplierServiceURL" value="https://external-systems.000webhostapp.com/"/>
 		<add key="SystemManagerEmail" value="RotemSela@gmail.com"/>
 		<add key="SystemManagerFirstName" value="Rotem"/>
 		<add key="SystemManagerLastName" value="Sela"/>
 		<add key="SystemManagerPass" value="AS87654askj!@#"/>
 		<add key="InitTradingSystem" value="True"/>
-		<add key="StartWithCleanDB" value="True"/>
+		<add key="StartWithCleanDB" value="False"/>
 		<add key="RunLoadData" value="False"/>
-		<add key="StateFileConfig" value="data2"/>
+		<add key="StateFileConfig" value=""/>
 		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
